# scade-git

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  ShellDoc.bat  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  label.yml
doc/changelog.d/: 25.documentation.md  26.maintenance.md  27.maintenance.md  28.maintenance.md  31.fixed.md  33.documentation.md  34.fixed.md  36.fixed.md  37.fixed.md  40.dependencies.md  41.dependencies.md  42.maintenance.md  46.dependencies.md  52.documentation.md  54.maintenance.md  55.miscellaneous.md  62.dependencies.md  64.miscellaneous.md  65.maintenance.md  66.miscellaneous.md  67.miscellaneous.md  70.miscellaneous.md  72.miscellaneous.md  74.miscellaneous.md  75.added.md  75.maintenance.md  77.maintenance.md  79.dependencies.md
doc/source/: conf.py  contributing.rst  index.rst
doc/source/getting_started/: index.rst
doc/source/gui-extensions/: index.rst
doc/source/merge-tools/: almgt.rst  etp.rst  index.rst
doc/styles/Vocab/ANSYS/: accept.txt
src/ansys/scade/git/: __init__.py  register.py  unregister.py
tests/: conftest.py  test_metadata.py  test_utils.py
tests/almgtmerge/: test_almgt_merge.py
tests/almgtmerge/resources/DelBoth/: Base.almgt  Local.almgt  Merge.almgt  Remote.almgt
tests/almgtmerge/resources/Model/: Model.almgp  Model.almgr  Model.almgt  Model.etp  Model.msoffice.reqs  Model.msoffice.trace  P.xscade
tests/almgtmerge/resources/Nominal/: Base.almgt  Local.almgt  Merge.almgt  Remote.almgt
tests/etpmerge/: .gitignore  readme.md  test_cache.py  test_merge.py
tests/etpmerge/resources/: .gitattributes  CleanGitTest.bat  RunGitTest.bat  readme.md
tests/etpmerge/resources/Advanced/: Base.etp  Local.etp  Merge.etp  Remote.etp  readme.md
tests/etpmerge/resources/Configurations/: Base.etp  Local.etp  Merge.etp  Remote.etp  readme.md
tests/etpmerge/resources/Crlf/: .gitattributes  Base.etp  Local.etp  Merge.etp  Remote.etp  readme.md
tests/etpmerge/resources/Files/: Base.etp  Local.etp  Merge.etp  Remote.etp  readme.md
tests/etpmerge/resources/Lf/: readme.md
tests/extension/: test_gitclient.py  test_gitextcore.py
tests/extension/ref/: commit.json  refresh.json  reset.json  reset_all.json  stage.json  stage_all.json  unstage.json  unstage_all.json
version/: index.html
version/0.1/: announcement.html  contributing.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/: changelog.rst.txt
version/0.1/gui-extensions/: index.html
version/0.1/merge-tools/: almgt.html  etp.html  index.html
version/0.2/: changelog.html  contributing.html  genindex.html  index.html
version/0.2/_static/: search.json
version/0.2/merge-tools/: index.html
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_static/: search.json
version/dev/getting_started/: index.html
version/dev/gui-extensions/: index.html
version/dev/merge-tools/: almgt.html  etp.html  index.html
version/stable/: changelog.html  genindex.html  index.html  objects.inv  search.html
version/stable/_sources/: changelog.rst.txt  index.rst.txt
version/stable/getting_started/: index.html
version/stable/gui-extensions/: index.html
version/stable/merge-tools/: almgt.html  etp.html
(+64 files in other folders)
